# CurseClient-Rust

./: Cargo.toml  README.md
.github/workflows/: release-dylib.yml
ios/: CurseClient.swift  curseclient_rust.h  module.modulemap
src/: ffi.rs  lib.rs  main.rs
