[package]
name = "curseclient_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
futures = "0.3"

[dev-dependencies]
anyhow = "1"
